# compressor-and-hasher-with-cpp

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
include/: hasher.h
